--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h>This is my first github project</h>
-   <h>Look mama, I'm using github</h> 
+    <h3>This is my first github project</h3>
+   <h2>Look mama, I'm using github</h2> 
    <h1>ok I agree with you</h1>
 </body>
 </html>
