--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
    <h2>Look mama, I'm using github</h2> 
    <h1>ok I agree with you</h1>
    <p1>Lets go for a visit</p1>
+   <p2>Talking from the second</p2>
+   <p3>This line added in the my third branch</p3>
    <img src="q1.jpg" alt="my-2nd-website">
 </body>
 </html>
