--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
    <p1>Lets go for a visit</p1>
    <p2>Talking from the second</p2>
    <p3>This line added in the my third branch</p3>
+   <p4>Added more code in the third branch</p4>
    <img src="q1.jpg" alt="my-2nd-website">
 </body>
 </html>
