title changed again

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>upper Documented</title>
 </head>
 <body>
     <h5>some people doesn't understood to me</h5>
@@ -11,13 +11,8 @@
    <h2>Look mama, I'm using github</h2> 
    <h1>ok I agree with you</h1>
    <p1>Lets go for a visit</p1>
-<<<<<<< HEAD
-   <p2>Talking from the updated in main branch</p2>
-   <p3>This line added in the my third branch</p3>
-=======
    <p2>Talking from the updated in again branch</p2>
-   <p3>This line added in the my another branch</p3>
->>>>>>> my-3rd-branch
+   <p3>This line added in the my third branch</p3>
    <p4>Added more code in the third branch</p4>
    <img src="q1.jpg" alt="my-2nd-website">
 </body>
