--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h5>some people doesn't understood to me</h5>
-    <h3>This is my first github project</h3>
+    <h3>This is my recent github project</h3>
    <h2>Look mama, I'm using github</h2> 
    <h1>ok I agree with you</h1>
    <p1>Lets go for a visit</p1>
