--- a/index.html
+++ b/index.html
@@ -15,5 +15,6 @@
    <p3>This line added in the my another branch</p3>
    <p4>Added more code in the third branch</p4>
    <img src="q1.jpg" alt="my-2nd-website">
+   <img src="index.jpg" alt="my-2nd-website">
 </body>
 </html>
